--- a/client.html
+++ b/client.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Coplay SGU Team</title>
-    <link rel="stylesheet" href="/client.css">
+    <link rel="stylesheet" href="./client.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="part1--content">
             <div class="part1--content__lable">
                 <p class="label">Robot profile:</p>
-                <p class="lable">Connected Robot Name is</p>
+                <p class="label">Connected Robot Name is </p>
             </div>
             <div class="part1--content__input">
                 <div>
@@ -49,7 +49,7 @@
                 <p class="lable">Password:</p>
                 <p class="lable">Host:</p>
                 <p class="lable">Port:</p>
-                <p class="lable">Chanel name:</p>
+                <p class="lable">Channel name:</p>
             </div>      
             <div class="part2--content__input">
                 <input type="text" id="ssidInput" value="" placeholder="">
@@ -57,7 +57,7 @@
                 <input type="text" id="hostInput" value="" placeholder="">
                 <input type="text" id="portInput" value="" placeholder="">
                 <div>
-                    <input type="text" id="chanelNameInput" value="" placeholder="">
+                    <input type="text" id="channelNameInput" value="" placeholder="" disabled>
                     <button type="button" class="sendButton" class="button">Send</button>
                 </div>   
             </div>
