--- a/client.html
+++ b/client.html
@@ -84,7 +84,7 @@
     <script> 
         const socket = io();
     </script>
-    <script type="module" src="/video.js"></script>
+    <script src="./video.js"></script>
     <script type="module" src="./bluetooth.js"></script>
 </body>
  
