--- a/bluetooth.html
+++ b/bluetooth.html
@@ -29,6 +29,7 @@
           placeholder=""
           disabled
         />
+    </section>
       </section>
       <h2>2. Send the media server information to robot.</h2>
       <div class="form-container">
@@ -58,8 +59,10 @@
         </div>
     </div>
     
+    <button id="sendMediaServerInfoButton">Send</button>
+    </section>
     
-      <script type="module" src="./script.js"></script>
+      <script type="module" src="script.js"></script>
 
 
 </body>
