--- a/client.html
+++ b/client.html
@@ -14,7 +14,7 @@
     <hr>
     <h2 class="controlName">Remote AI Hand Gesture Control</h2>
     
-    <!-- <div id="part1"> 
+    <div id="part1"> 
         <h3>1. Find the robot and pair.</h3>
         <div class="part1--content">
             <div class="part1--content__label">
@@ -38,9 +38,9 @@
                 <input type="text" class="robotNameInput" value="" placeholder="">                        
             </div> 
         </div>        
-    </div> -->
+    </div>
 
-    <section>
+    <!-- <section>
         <h2>1. Find the robot and pair.</h2>
         <label for="robotSelect">Robot profile: </label>
         <select id="robotSelect">
@@ -63,7 +63,7 @@
           placeholder=""
           disabled
         />
-    </section>
+    </section> -->
 
 
     </section>
@@ -123,7 +123,7 @@
     </script>
     <script src="./video.js"></script>
     <script type="module" src="./bluetooth.js"></script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
  
 </html>
