--- a/client.html
+++ b/client.html
@@ -96,6 +96,7 @@
     <script type="module" src="./bluetooth.js"></script>
     <!-- <script type="module" src="./script.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
 </body>
  
 </html>
