--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <div>
                                 <select id="robotProfile">
                                     <option value="ESP_CW_001">ESP_CW_001</option>
-                                    <option value="RPI_BW_001">RPI_BW_001</option>
+                                    <option value="RPI_BW_001" selected>RPI_BW_001</option>
                                     <option value="RPI_CL_001">RPI_CL_001</option>
                                     <option value="RPI_CL_002">RPI_CL_002</option>
                                     <option value="RPI_CW_001">RPI_CW_001</option>
@@ -91,12 +91,12 @@
                         <p class="label">Chanel name:</p>
                     </div>      
                     <div class="part2--content__input">
-                        <input type="text" id="ssidInput" value="" placeholder="">
-                        <input type="password" id="passwordInput" value="" placeholder="">
-                        <input type="text" id="hostInput" value="" placeholder="">
-                        <input type="text" id="portInput" value="" placeholder="">
+                        <input type="text" id="ssidInput" value="Huy" placeholder="">
+                        <input type="password" id="passwordInput" value="huy12345" placeholder="">
+                        <input type="text" id="hostInput" value="agilertc.com" placeholder="">
+                        <input type="text" id="portInput" value="8276" placeholder="">
                         <div>
-                            <input type="text" id="channelNameInput" value="" placeholder="">
+                            <input type="text" id="channelNameInput" value="zugiv" placeholder="">
                             <button type="button" id="sendButton" class="button">Send</button>
                         </div>   
                     </div>
